2009-09-30  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* mediaelement.cpp: Stop immediately when the we're deattached from the
	visual tree.

	r: andreia

2009-09-30  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* deployment.h: Fix typo in comment.

2009-09-29  Chris Toshok  <toshok@ximian.com>

	* dependencyobject.cpp (EventObject::StartEmit): when we copy the
	list of closures to invoke, don't copy ones that are
	pending_removal.  This fixes the crash due to re-entering in drt
	502 in a way that doesn't break the existing plugin behavior.
	(EventObject::DoEmitCurrentContext): revert the
	!closure->pending_removal change that caused plugin event listener
	breakage in the xaml tests.

	r: andreia

2009-09-29  Larry Ewing  <lewing@novell.com>

	* border.cpp (InsideObject): improve Border::InsideObject to
	handle the actual drawn bounds.

	Fixes #2022.

	r: jackson
	
2009-09-29  Jeffrey Stedfast  <fejj@novell.com>

	* textbox.cpp (PostOnKeyDown): Renamed from OnCharacterKeyDown()
	to be more consistent with the managed method names. Don't set
	Handled to true, since anything that makes it this far should also
	bubble up.

	r:toshok

2009-09-28  Andreia Gaita  <avidigal@novell.com>

	* application.cpp, bitmapimage.cpp,
	  file-downloader.cpp, fontmanager.cpp,
	  pipeline-ui.cpp, pipeline.cpp,
	  utils.cpp: uniform usage of glib io calls

	r: toshok

2009-09-29  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* window-gtk.cpp: gtk_window_destroy can cause reentry, so ensure we leave
	the current deployment as it was when returning from it.

	r: lewing
	
2009-09-29  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* mediaelement.cpp|h: When receiving markers from the pipeline, store them
	in a general list and only move them into a TimelineCollection just before
	checking if they are to be emitted. This avoids locking a mutex during a
	potentially large time, as well as trying to emit an event on the pipeline
	thread (collection changed event when adding markers to the